# Fiend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: auth.rs  config.rs  crypto.rs  main.rs  server.rs  socks5.rs
src/fingerprint/: mod.rs  parse.rs
src/mux/: frame.rs  mod.rs  session.rs  stream.rs
src/proxy/: protocol.rs  server.rs
src/transport/: bridge.rs  conn.rs  mod.rs
src/transport/disguise/: mod.rs  replay.rs  tls.rs
