[package]
name = "fiend"
version = "0.1.2"
edition = "2024"
description = "Stealth SOCKS5 proxy that disguises traffic as TLS 1.3"
license = "MIT"
authors = ["r3pr3ss10n"]
keywords = ["proxy", "socks5", "tls", "stealth", "tunnel"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.10"
fastrand = "2"
chacha20poly1305 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["net", "io-util", "time", "rt", "rt-multi-thread", "sync", "macros", "signal"] }
socket2 = "0.6"
bytes = "1.8"
